# feincms3-cookiecontrol

./: .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  admin.py  apps.py  biome.json  esbuild.js  gcm.js  main.css  main.js  mise.toml  models.py  package.json  pyproject.toml  setup.cfg  tox.ini  webpack.config.js
.github/workflows/: publish.yml  tests.yml
feincms3_cookiecontrol/: __init__.py  admin.py  apps.py  checks.py  embedding.py  external.py  models.py  views.py
feincms3_cookiecontrol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
feincms3_cookiecontrol/fixtures/: f3cc-categories.json
feincms3_cookiecontrol/locale/de/LC_MESSAGES/: django.mo  django.po
feincms3_cookiecontrol/locale/en/LC_MESSAGES/: django.mo  django.po
feincms3_cookiecontrol/locale/es/LC_MESSAGES/: django.mo  django.po
feincms3_cookiecontrol/locale/fr/LC_MESSAGES/: django.mo  django.po
feincms3_cookiecontrol/locale/it/LC_MESSAGES/: django.mo  django.po
feincms3_cookiecontrol/locale/rm/LC_MESSAGES/: django.mo  django.po
feincms3_cookiecontrol/migrations/: 0001_initial.py  0001_rework.py
feincms3_cookiecontrol/static/: f3cc.js
feincms3_cookiecontrol/static/f3cc/: gcm.js
feincms3_cookiecontrol/static/feincms3_cookiecontrol/: build.js  build.main.css  build.main.js  main.css  main.js  main.min.js  style.css
feincms3_cookiecontrol/static/fh_cookiecontrol/: main.min.js
feincms3_cookiecontrol/templates/feincms3_cookiecontrol/: banner.html  conscious_embed.html  embed.html  manage-cookies-button.html  panel.html
feincms3_cookiecontrol/templates/fh_cookiecontrol/: panel.html
feincms3_cookiecontrol/templatetags/: feincms3_cookiecontrol.py
fh_cookiecontrol/: apps.py
fh_cookiecontrol/static/fh_cookiecontrol/: main.js  main.min.js
src/: gcm.js  main.css  main.js
static/: main.js  main.min.js
templates/: panel.html
templatetags/: ccp.py
tests/testapp/: models.py  settings.py  test_banner_e2e.py  test_conscious_embed.py  test_cookiecontrol.py  test_embed.py  test_embed_e2e.py  urls.py  views.py
tests/testapp/migrate/f3cc/: 0001_initial.py
tests/testapp/templates/: test_embed_page.html  test_page.html
