[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "feincms3-cookiecontrol"
description = "Cookie Control Panel for GDPR compliant feincms3 websites"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "York Schickl", email = "ys@feinheit.ch" },
]
requires-python = ">=3.10"
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  # "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dynamic = [ "version" ]
dependencies = [
  "django>=3.2",
]
optional-dependencies.embedding = [
  "feincms3>=5.2.2",
]
optional-dependencies.tests = [
  "coverage",
  "feincms3>=5.2.2",
  "requests",
]
urls.Homepage = "https://github.com/feincms/feincms3-cookiecontrol/"

[tool.hatch.build]
include = [ "feincms3_cookiecontrol/" ]

[tool.hatch.version]
path = "feincms3_cookiecontrol/__init__.py"

[tool.ruff]
target-version = "py310"

fix = true
show-fixes = true
extend-select = [
  # pyflakes, pycodestyle
  "F",
  "E",
  "W",
  # mmcabe
  "C90",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # flake8-boolean-trap
  "FBT",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-django
  "DJ",
  # flake8-logging-format
  "G",
  # flake8-pie
  "PIE",
  # flake8-simplify
  "SIM",
  # flake8-gettext
  "INT",
  # pygrep-hooks
  "PGH",
  # pylint
  "PL",
  # unused noqa
  "RUF100",
]
extend-ignore = [
  # Allow zip() without strict=
  "B905",
  # No line length errors
  "E501",
]
mccabe.max-complexity = 15
per-file-ignores."*/migrat*/*" = [
  # Allow using PascalCase model names in migrations
  "N806",
  # Ignore the fact that migration files are invalid module names
  "N999",
]
isort.combine-as-imports = true
isort.lines-after-imports = 2
