[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "feincms3-cookiecontrol"
description = "Cookie Control Panel for GDPR compliant feincms3 websites"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "York Schickl", email = "ys@feinheit.ch" },
]
requires-python = ">=3.10"
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  # "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dynamic = [ "version" ]
dependencies = [
  "django>=3.2",
]
optional-dependencies.embedding = [
  "feincms3>=5.2.2",
]
optional-dependencies.tests = [
  "coverage",
  "feincms3>=5.2.2",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-playwright",
  "requests",
]
urls.Homepage = "https://github.com/feincms/feincms3-cookiecontrol/"

[tool.hatch.build]
include = [ "feincms3_cookiecontrol/" ]

[tool.hatch.version]
path = "feincms3_cookiecontrol/__init__.py"

[tool.ruff]
target-version = "py310"

fix = true
show-fixes = true
lint.extend-select = [
  # flake8-builtins
  "A",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # mmcabe
  "C90",
  # flake8-django
  "DJ",
  "E",
  # pyflakes, pycodestyle
  "F",
  # flake8-boolean-trap
  "FBT",
  # flake8-logging-format
  "G",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # pep8-naming
  "N",
  # pygrep-hooks
  "PGH",
  # flake8-pie
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLW",
  # flake8-pytest-style
  "PT",
  # unused noqa
  "RUF100",
  # flake8-simplify
  "SIM",
  # pyupgrade
  "UP",
  "W",
  # flake8-2020
  "YTT",
]
lint.extend-ignore = [
  # Allow zip() without strict=
  "B905",
  # No line length errors
  "E501",
]
lint.per-file-ignores."*/migrat*/*" = [
  # Allow using PascalCase model names in migrations
  "N806",
  # Ignore the fact that migration files are invalid module names
  "N999",
]
lint.isort.combine-as-imports = true
lint.isort.lines-after-imports = 2

lint.mccabe.max-complexity = 15

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testapp.settings"
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = "-v --tb=short"
testpaths = [ "tests" ]
pythonpath = [ "tests" ]
markers = [
  "e2e: end-to-end tests",
]
