[metadata]
name = feincms3_cookiecontrol
version = attr: feincms3_cookiecontrol.__version__
description = Cookie Control Panel for GDPR compliant feincms3 websites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feinheit/feincms3-cookiecontrol/
author = York Schickl
author_email = ys@feinheit.ch
license = BSD-3-License
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=3.2
    django-admin-ordering>=0.14.2
    django-translated-fields>=0.10.2
    feincms3>=0.91.0
    html-sanitizer
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
exclude = venv,build,docs,.tox,migrations
max-complexity = 10
max-line-length = 88

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
include =
    *feincms3_cookiecontrol*
omit =
    *migrations*
    *tests*
    *.tox*
